examples/errors/array_error.sl
var a: int[2] = [12];
var b: int = 2;

b[1] = 12;
a = 2;